# nbgrader-k8s-exchange

nbgrader-chart/: values.yaml
nbgrader-chart/templates/: cm.yaml
nbgrader-exchange/: pyproject.toml
nbgrader-exchange/nbgrader_k8s_exchange/plugin/: list.py
